// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Google renders correctly 1`] = `
<div
  className="google-picker "
  style={
    Object {
      "MozBorderRadius": "8px 8px 0px 0px",
      "OBorderRadius": "8px 8px 0px 0px",
      "WebkitBorderRadius": "8px 8px 0px 0px",
      "background": "#fff",
      "border": "1px solid #dfe1e5",
      "borderRadius": "8px 8px 0px 0px",
      "boxSizing": "initial",
      "display": "flex",
      "flexWrap": "wrap",
      "msBorderRadius": "8px 8px 0px 0px",
      "width": 652,
    }
  }
>
  <div
    style={
      Object {
        "boxSizing": "border-box",
        "fontFamily": "Roboto-Regular,HelveticaNeue,Arial,sans-serif",
        "fontSize": "20px",
        "height": "57px",
        "paddingBottom": "16px",
        "paddingLeft": "16px",
        "paddingTop": "16px",
        "width": "100%",
      }
    }
  >
    Color picker
  </div>
  <div
    style={
      Object {
        "background": "rgba(34, 25, 77, 1)",
        "height": "228px",
        "overflow": "hidden",
        "padding": "0px",
        "position": "relative",
        "width": "30%",
      }
    }
  />
  <div
    style={
      Object {
        "overflow": "hidden",
        "padding": "0px",
        "position": "relative",
        "width": "70%",
      }
    }
  >
    <div
      onMouseDown={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "MozBorderRadius": undefined,
          "OBorderRadius": undefined,
          "WebkitBorderRadius": undefined,
          "background": "hsl(249.99999999999994,100%, 50%)",
          "borderRadius": undefined,
          "bottom": "0px",
          "left": "0px",
          "msBorderRadius": undefined,
          "position": "absolute",
          "right": "0px",
          "top": "0px",
        }
      }
    >
      <style>
        
                  .saturation-white {
                    background: -webkit-linear-gradient(to right, #fff, rgba(255,255,255,0));
                    background: linear-gradient(to right, #fff, rgba(255,255,255,0));
                  }
                  .saturation-black {
                    background: -webkit-linear-gradient(to top, #000, rgba(0,0,0,0));
                    background: linear-gradient(to top, #000, rgba(0,0,0,0));
                  }
                
      </style>
      <div
        className="saturation-white"
        style={
          Object {
            "MozBorderRadius": undefined,
            "OBorderRadius": undefined,
            "WebkitBorderRadius": undefined,
            "borderRadius": undefined,
            "bottom": "0px",
            "left": "0px",
            "msBorderRadius": undefined,
            "position": "absolute",
            "right": "0px",
            "top": "0px",
          }
        }
      >
        <div
          className="saturation-black"
          style={
            Object {
              "MozBorderRadius": undefined,
              "MozBoxShadow": undefined,
              "OBorderRadius": undefined,
              "OBoxShadow": undefined,
              "WebkitBorderRadius": undefined,
              "WebkitBoxShadow": undefined,
              "borderRadius": undefined,
              "bottom": "0px",
              "boxShadow": undefined,
              "left": "0px",
              "msBorderRadius": undefined,
              "msBoxShadow": undefined,
              "position": "absolute",
              "right": "0px",
              "top": "0px",
            }
          }
        />
        <div
          style={
            Object {
              "cursor": "default",
              "left": "66.66666666666667%",
              "position": "absolute",
              "top": "70%",
            }
          }
        >
          <div
            style={
              Object {
                "MozBorderRadius": "22px",
                "MozTransform": "translate(-12px, -13px)",
                "OBorderRadius": "22px",
                "OTransform": "translate(-12px, -13px)",
                "WebkitBorderRadius": "22px",
                "WebkitTransform": "translate(-12px, -13px)",
                "background": "hsl(250, 50%, 20%)",
                "border": "2px #fff solid",
                "borderRadius": "22px",
                "height": "20px",
                "msBorderRadius": "22px",
                "msTransform": "translate(-12px, -13px)",
                "transform": "translate(-12px, -13px)",
                "width": "20px",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "margin": "auto",
        "width": "95%",
      }
    }
  >
    <div
      className="flexbox-fix"
      style={
        Object {
          "boxSizing": "border-box",
          "display": "flex",
          "height": "52px",
          "paddingTop": "22px",
        }
      }
    >
      <div
        style={
          Object {
            "height": "8px",
            "margin": "0px 16px 0px 16px",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "MozBorderRadius": "4px",
              "MozBoxShadow": undefined,
              "OBorderRadius": "4px",
              "OBoxShadow": undefined,
              "WebkitBorderRadius": "4px",
              "WebkitBoxShadow": undefined,
              "borderRadius": "4px",
              "bottom": "0px",
              "boxShadow": undefined,
              "left": "0px",
              "msBorderRadius": "4px",
              "msBoxShadow": undefined,
              "position": "absolute",
              "right": "0px",
              "top": "0px",
            }
          }
        >
          <div
            className="hue-horizontal"
            onMouseDown={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "MozBorderRadius": "4px",
                "OBorderRadius": "4px",
                "WebkitBorderRadius": "4px",
                "borderRadius": "4px",
                "height": "100%",
                "msBorderRadius": "4px",
                "padding": "0 2px",
                "position": "relative",
              }
            }
          >
            <style>
              
                          .hue-horizontal {
                            background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                              33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
                            background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                              17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
                          }
              
                          .hue-vertical {
                            background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                              #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
                            background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                              #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
                          }
                        
            </style>
            <div
              style={
                Object {
                  "left": "69.44444444444443%",
                  "position": "absolute",
                }
              }
            >
              <div
                style={
                  Object {
                    "MozBorderRadius": "22px",
                    "MozTransform": "translate(-10px, -7px)",
                    "OBorderRadius": "22px",
                    "OTransform": "translate(-10px, -7px)",
                    "WebkitBorderRadius": "22px",
                    "WebkitTransform": "translate(-10px, -7px)",
                    "background": "hsl(250, 100%, 50%)",
                    "border": "2px white solid",
                    "borderRadius": "22px",
                    "height": "20px",
                    "msBorderRadius": "22px",
                    "msTransform": "translate(-10px, -7px)",
                    "transform": "translate(-10px, -7px)",
                    "width": "20px",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="flexbox-fix"
      style={
        Object {
          "display": "flex",
          "height": "100px",
          "marginTop": "4px",
        }
      }
    >
      <div
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "boxSizing": "border-box",
              "padding": "0px 4.4px",
            }
          }
        >
          <div
            style={
              Object {
                "position": "relative",
              }
            }
          >
            <input
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder={undefined}
              spellCheck="false"
              style={
                Object {
                  "MozBorderRadius": "5px",
                  "OBorderRadius": "5px",
                  "WebkitBorderRadius": "5px",
                  "border": "1px solid #dadce0",
                  "borderRadius": "5px",
                  "boxSizing": "border-box",
                  "fontFamily": "Roboto,Arial,sans-serif",
                  "fontSize": "11px",
                  "height": "38px",
                  "msBorderRadius": "5px",
                  "outline": "none",
                  "padding": "4px 10% 3px",
                  "textAlign": "center",
                  "textTransform": "lowercase",
                  "width": "100%",
                }
              }
              value="#22194D"
            />
            <span
              onMouseDown={[Function]}
              style={
                Object {
                  "background": "#fff",
                  "color": "#3c4043",
                  "fontFamily": "Roboto,Arial,sans-serif",
                  "fontSize": "12px",
                  "left": "0",
                  "marginLeft": "auto",
                  "marginRight": "auto",
                  "position": "absolute",
                  "right": "0",
                  "textAlign": "center",
                  "textTransform": "uppercase",
                  "top": "-6px",
                  "width": "35px",
                }
              }
            >
              hex
            </span>
          </div>
        </div>
        <div
          style={
            Object {
              "WebkitJustifyContent": "space-between",
              "display": "flex",
              "justifyContent": "space-between",
              "paddingTop": "10px",
            }
          }
        >
          <div
            style={
              Object {
                "flexGrow": "1",
                "margin": "0px 4.4px",
              }
            }
          >
            <div
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <input
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder={undefined}
                spellCheck="false"
                style={
                  Object {
                    "MozBorderRadius": "5px",
                    "OBorderRadius": "5px",
                    "WebkitBorderRadius": "5px",
                    "border": "1px solid #dadce0",
                    "borderRadius": "5px",
                    "boxSizing": "border-box",
                    "fontFamily": "Roboto,Arial,sans-serif",
                    "fontSize": "11px",
                    "height": "38px",
                    "msBorderRadius": "5px",
                    "outline": "none",
                    "paddingLeft": "10px",
                    "textTransform": "lowercase",
                    "width": "100%",
                  }
                }
                value="34, 25, 77"
              />
              <span
                onMouseDown={[Function]}
                style={
                  Object {
                    "background": "#fff",
                    "color": "#3c4043",
                    "fontFamily": "Roboto,Arial,sans-serif",
                    "fontSize": "12px",
                    "left": "10px",
                    "position": "absolute",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                    "top": "-6px",
                    "width": "32px",
                  }
                }
              >
                rgb
              </span>
            </div>
          </div>
          <div
            style={
              Object {
                "flexGrow": "1",
                "margin": "0px 4.4px",
              }
            }
          >
            <div
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <input
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder={undefined}
                spellCheck="false"
                style={
                  Object {
                    "MozBorderRadius": "5px",
                    "OBorderRadius": "5px",
                    "WebkitBorderRadius": "5px",
                    "border": "1px solid #dadce0",
                    "borderRadius": "5px",
                    "boxSizing": "border-box",
                    "fontFamily": "Roboto,Arial,sans-serif",
                    "fontSize": "11px",
                    "height": "38px",
                    "msBorderRadius": "5px",
                    "outline": "none",
                    "paddingLeft": "10px",
                    "textTransform": "lowercase",
                    "width": "100%",
                  }
                }
                value="250°, 67%, 30%"
              />
              <span
                onMouseDown={[Function]}
                style={
                  Object {
                    "background": "#fff",
                    "color": "#3c4043",
                    "fontFamily": "Roboto,Arial,sans-serif",
                    "fontSize": "12px",
                    "left": "10px",
                    "position": "absolute",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                    "top": "-6px",
                    "width": "32px",
                  }
                }
              >
                hsv
              </span>
            </div>
          </div>
          <div
            style={
              Object {
                "flexGrow": "1",
                "margin": "0px 4.4px",
              }
            }
          >
            <div
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <input
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder={undefined}
                spellCheck="false"
                style={
                  Object {
                    "MozBorderRadius": "5px",
                    "OBorderRadius": "5px",
                    "WebkitBorderRadius": "5px",
                    "border": "1px solid #dadce0",
                    "borderRadius": "5px",
                    "boxSizing": "border-box",
                    "fontFamily": "Roboto,Arial,sans-serif",
                    "fontSize": "11px",
                    "height": "38px",
                    "msBorderRadius": "5px",
                    "outline": "none",
                    "paddingLeft": "10px",
                    "textTransform": "lowercase",
                    "width": "100%",
                  }
                }
                value="250°, 50%, 20%"
              />
              <span
                onMouseDown={[Function]}
                style={
                  Object {
                    "background": "#fff",
                    "color": "#3c4043",
                    "fontFamily": "Roboto,Arial,sans-serif",
                    "fontSize": "12px",
                    "left": "10px",
                    "position": "absolute",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                    "top": "-6px",
                    "width": "32px",
                  }
                }
              >
                hsl
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GoogleFields renders correctly 1`] = `
<div
  className="flexbox-fix"
  style={
    Object {
      "display": "flex",
      "height": "100px",
      "marginTop": "4px",
    }
  }
>
  <div
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "boxSizing": "border-box",
          "padding": "0px 4.4px",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder={undefined}
          spellCheck="false"
          style={
            Object {
              "MozBorderRadius": "5px",
              "OBorderRadius": "5px",
              "WebkitBorderRadius": "5px",
              "border": "1px solid #dadce0",
              "borderRadius": "5px",
              "boxSizing": "border-box",
              "fontFamily": "Roboto,Arial,sans-serif",
              "fontSize": "11px",
              "height": "38px",
              "msBorderRadius": "5px",
              "outline": "none",
              "padding": "4px 10% 3px",
              "textAlign": "center",
              "textTransform": "lowercase",
              "width": "100%",
            }
          }
          value="#FF0000"
        />
        <span
          onMouseDown={[Function]}
          style={
            Object {
              "background": "#fff",
              "color": "#3c4043",
              "fontFamily": "Roboto,Arial,sans-serif",
              "fontSize": "12px",
              "left": "0",
              "marginLeft": "auto",
              "marginRight": "auto",
              "position": "absolute",
              "right": "0",
              "textAlign": "center",
              "textTransform": "uppercase",
              "top": "-6px",
              "width": "35px",
            }
          }
        >
          hex
        </span>
      </div>
    </div>
    <div
      style={
        Object {
          "WebkitJustifyContent": "space-between",
          "display": "flex",
          "justifyContent": "space-between",
          "paddingTop": "10px",
        }
      }
    >
      <div
        style={
          Object {
            "flexGrow": "1",
            "margin": "0px 4.4px",
          }
        }
      >
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <input
            onBlur={[Function]}
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder={undefined}
            spellCheck="false"
            style={
              Object {
                "MozBorderRadius": "5px",
                "OBorderRadius": "5px",
                "WebkitBorderRadius": "5px",
                "border": "1px solid #dadce0",
                "borderRadius": "5px",
                "boxSizing": "border-box",
                "fontFamily": "Roboto,Arial,sans-serif",
                "fontSize": "11px",
                "height": "38px",
                "msBorderRadius": "5px",
                "outline": "none",
                "paddingLeft": "10px",
                "textTransform": "lowercase",
                "width": "100%",
              }
            }
            value="255, 0, 0"
          />
          <span
            onMouseDown={[Function]}
            style={
              Object {
                "background": "#fff",
                "color": "#3c4043",
                "fontFamily": "Roboto,Arial,sans-serif",
                "fontSize": "12px",
                "left": "10px",
                "position": "absolute",
                "textAlign": "center",
                "textTransform": "uppercase",
                "top": "-6px",
                "width": "32px",
              }
            }
          >
            rgb
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "flexGrow": "1",
            "margin": "0px 4.4px",
          }
        }
      >
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <input
            onBlur={[Function]}
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder={undefined}
            spellCheck="false"
            style={
              Object {
                "MozBorderRadius": "5px",
                "OBorderRadius": "5px",
                "WebkitBorderRadius": "5px",
                "border": "1px solid #dadce0",
                "borderRadius": "5px",
                "boxSizing": "border-box",
                "fontFamily": "Roboto,Arial,sans-serif",
                "fontSize": "11px",
                "height": "38px",
                "msBorderRadius": "5px",
                "outline": "none",
                "paddingLeft": "10px",
                "textTransform": "lowercase",
                "width": "100%",
              }
            }
            value="0°, 100%, 100%"
          />
          <span
            onMouseDown={[Function]}
            style={
              Object {
                "background": "#fff",
                "color": "#3c4043",
                "fontFamily": "Roboto,Arial,sans-serif",
                "fontSize": "12px",
                "left": "10px",
                "position": "absolute",
                "textAlign": "center",
                "textTransform": "uppercase",
                "top": "-6px",
                "width": "32px",
              }
            }
          >
            hsv
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "flexGrow": "1",
            "margin": "0px 4.4px",
          }
        }
      >
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <input
            onBlur={[Function]}
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder={undefined}
            spellCheck="false"
            style={
              Object {
                "MozBorderRadius": "5px",
                "OBorderRadius": "5px",
                "WebkitBorderRadius": "5px",
                "border": "1px solid #dadce0",
                "borderRadius": "5px",
                "boxSizing": "border-box",
                "fontFamily": "Roboto,Arial,sans-serif",
                "fontSize": "11px",
                "height": "38px",
                "msBorderRadius": "5px",
                "outline": "none",
                "paddingLeft": "10px",
                "textTransform": "lowercase",
                "width": "100%",
              }
            }
            value="0°, 100%, 50%"
          />
          <span
            onMouseDown={[Function]}
            style={
              Object {
                "background": "#fff",
                "color": "#3c4043",
                "fontFamily": "Roboto,Arial,sans-serif",
                "fontSize": "12px",
                "left": "10px",
                "position": "absolute",
                "textAlign": "center",
                "textTransform": "uppercase",
                "top": "-6px",
                "width": "32px",
              }
            }
          >
            hsl
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GooglePointer renders correctly 1`] = `
<div
  style={
    Object {
      "MozBorderRadius": "22px",
      "MozTransform": "translate(-10px, -7px)",
      "OBorderRadius": "22px",
      "OTransform": "translate(-10px, -7px)",
      "WebkitBorderRadius": "22px",
      "WebkitTransform": "translate(-10px, -7px)",
      "background": "hsl(250, 100%, 50%)",
      "border": "2px white solid",
      "borderRadius": "22px",
      "height": "20px",
      "msBorderRadius": "22px",
      "msTransform": "translate(-10px, -7px)",
      "transform": "translate(-10px, -7px)",
      "width": "20px",
    }
  }
/>
`;

exports[`GooglePointerCircle renders correctly 1`] = `
<div
  style={
    Object {
      "MozBorderRadius": "22px",
      "MozTransform": "translate(-12px, -13px)",
      "OBorderRadius": "22px",
      "OTransform": "translate(-12px, -13px)",
      "WebkitBorderRadius": "22px",
      "WebkitTransform": "translate(-12px, -13px)",
      "background": "hsl(250, 50%, 20%)",
      "border": "2px #fff solid",
      "borderRadius": "22px",
      "height": "20px",
      "msBorderRadius": "22px",
      "msTransform": "translate(-12px, -13px)",
      "transform": "translate(-12px, -13px)",
      "width": "20px",
    }
  }
/>
`;
